--- a/python-geosolve/requirements.txt
+++ b/python-geosolve/requirements.txt
@@ -38,7 +38,11 @@ six==1.17.0
 tensorboard==2.19.0
 tensorboard-data-server==0.7.2
 tensorflow==2.19.0
-tensorflow-io-gcs-filesystem==0.37.0
+# For Windows
+tensorflow-io-gcs-filesystem==0.31.0; sys_platform == 'win32'
+
+# For macOS
+tensorflow-io-gcs-filesystem>=0.37.0; sys_platform == 'darwin'
 termcolor==3.1.0
 typing_extensions==4.14.1
 tzdata==2025.2
