--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "geosolve",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "devStart": "nodemon index.js"
+    "devStart": "nodemon app.js"
   },
   "repository": {
     "type": "git",
