--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "description": "",
   "dependencies": {
     "@tailwindcss/cli": "^4.1.11",
+    "@tailwindcss/postcss": "^4.1.11",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
