--- a/python-geosolve/requirements.txt
+++ b/python-geosolve/requirements.txt
@@ -22,6 +22,18 @@ mdurl==0.1.2
 ml_dtypes==0.5.1
 namex==0.1.0
 numpy==2.1.3
+nvidia-cublas-cu12==12.5.3.2
+nvidia-cuda-cupti-cu12==12.5.82
+nvidia-cuda-nvcc-cu12==12.5.82
+nvidia-cuda-nvrtc-cu12==12.5.82
+nvidia-cuda-runtime-cu12==12.5.82
+nvidia-cudnn-cu12==9.3.0.75
+nvidia-cufft-cu12==11.2.3.61
+nvidia-curand-cu12==10.3.6.82
+nvidia-cusolver-cu12==11.6.3.83
+nvidia-cusparse-cu12==12.5.1.3
+nvidia-nccl-cu12==2.23.4
+nvidia-nvjitlink-cu12==12.5.82
 opt_einsum==3.4.0
 optree==0.16.0
 packaging==25.0
@@ -43,6 +55,9 @@ tensorflow-io-gcs-filesystem==0.31.0; sys_platform == 'win32'
 
 # For macOS
 tensorflow-io-gcs-filesystem>=0.37.0; sys_platform == 'darwin'
+
+#For Linux
+tensorflow-io-gcs-filesystem>=0.37.0; sys_platform == 'linux'
 termcolor==3.1.0
 typing_extensions==4.14.1
 tzdata==2025.2
