--- a/python-geosolve/requirements.txt
+++ b/python-geosolve/requirements.txt
@@ -1,66 +1,44 @@
-absl-py==2.3.1
-astunparse==1.6.3
-certifi==2025.7.9
-charset-normalizer==3.4.2
 contourpy==1.3.2
 cycler==0.12.1
-flatbuffers==25.2.10
+filelock==3.18.0
 fonttools==4.58.5
-gast==0.6.0
-google-pasta==0.2.0
-grpcio==1.73.1
-h5py==3.14.0
-idna==3.10
-keras==3.10.0
+fsspec==2025.5.1
+Jinja2==3.1.6
 kiwisolver==1.4.8
-libclang==18.1.1
-Markdown==3.8.2
-markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 matplotlib==3.10.3
-mdurl==0.1.2
-ml_dtypes==0.5.1
-namex==0.1.0
+mpmath==1.3.0
+networkx==3.4.2
 numpy==2.1.3
-nvidia-cublas-cu12==12.5.3.2
-nvidia-cuda-cupti-cu12==12.5.82
+nvidia-cublas-cu12==12.9.1.4
+nvidia-cuda-cupti-cu12==12.9.79
 nvidia-cuda-nvcc-cu12==12.5.82
-nvidia-cuda-nvrtc-cu12==12.5.82
-nvidia-cuda-runtime-cu12==12.5.82
-nvidia-cudnn-cu12==9.3.0.75
-nvidia-cufft-cu12==11.2.3.61
-nvidia-curand-cu12==10.3.6.82
-nvidia-cusolver-cu12==11.6.3.83
-nvidia-cusparse-cu12==12.5.1.3
-nvidia-nccl-cu12==2.23.4
-nvidia-nvjitlink-cu12==12.5.82
-opt_einsum==3.4.0
-optree==0.16.0
+nvidia-cuda-nvrtc-cu12==12.9.86
+nvidia-cuda-runtime-cu12==12.9.79
+nvidia-cudnn-cu12==9.10.2.21
+nvidia-cufft-cu12==11.4.1.4
+nvidia-cufile-cu12==1.14.1.1
+nvidia-curand-cu12==10.3.10.19
+nvidia-cusolver-cu12==11.7.5.82
+nvidia-cusparse-cu12==12.5.10.65
+nvidia-cusparselt-cu12==0.7.1
+nvidia-nccl-cu12==2.27.5
+nvidia-nvjitlink-cu12==12.9.86
+nvidia-nvshmem-cu12==3.3.9
+nvidia-nvtx-cu12==12.9.79
 packaging==25.0
 pandas==2.3.1
 pillow==11.3.0
-protobuf==5.29.5
-Pygments==2.19.2
+pip-autoremove==0.10.0
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
+pytorch-triton==3.4.0+git11ec6354
 pytz==2025.2
-requests==2.32.4
-rich==14.0.0
 six==1.17.0
-tensorboard==2.19.0
-tensorboard-data-server==0.7.2
-tensorflow==2.19.0
-# For Windows
-tensorflow-io-gcs-filesystem==0.31.0; sys_platform == 'win32'
-
-# For macOS
-tensorflow-io-gcs-filesystem>=0.37.0; sys_platform == 'darwin'
-
-#For Linux
-tensorflow-io-gcs-filesystem>=0.37.0; sys_platform == 'linux'
-termcolor==3.1.0
+sympy==1.14.0
+torch==2.9.0.dev20250726+cu129
+torchaudio==2.8.0.dev20250726+cu129
+torchvision==0.24.0.dev20250726+cu129
+tqdm==4.67.1
 typing_extensions==4.14.1
 tzdata==2025.2
-urllib3==2.5.0
-Werkzeug==3.1.3
-wrapt==1.17.2
